Add GLIBCXX_PARALLEL flag to support parallal sort

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ include(cmake/fortran.cmake)
 
 # Set flags/defines
 set(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS} ${SPLATT_FLAGS}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SPLATT_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SPLATT_FLAGS} -D_GLIBCXX_PARALLEL")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
